# cff-from-621

./: Justfile  README.md  justfile  pyproject.toml
.github/workflows/: publish.yml  qa.yml  release.yml
cff_from_621/: cli.py  lib.py  version.py
tests/: test_integration.py
tests/fixtures/: .gitignore
tests/fixtures/0001_delb/: CITATION.cff  pyproject.toml
tests/fixtures/0002_cff-from-621/: CITATION.cff  pyproject.toml
